# cd-allow

./: Cargo.toml  README.md
src/: cli.rs  domain.rs  licenses.rs  main.rs
