[package]
name = "cd-allow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
toml_edit = "0.22.24"
